Adds sprint challenge and computer architecture repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "Theory and Hash Tables/Sprint-Challenge--Hash-Theory"]
 	path = Theory and Hash Tables/Sprint-Challenge--Hash-Theory
 	url = https://github.com/samanthagatt/Sprint-Challenge--Hash-Theory.git
+[submodule "Computer Architecture/Computer-Architecture"]
+	path = Computer Architecture/Computer-Architecture
+	url = https://github.com/samanthagatt/Computer-Architecture.git
